resolve some bugs

--- a/expert/templates/expert/project.html
+++ b/expert/templates/expert/project.html
@@ -304,7 +304,7 @@
                                                                 <img src="{% static 'img/empty-tray.svg' %}"
                                                                      alt="no researcher" height="100px" class="rounded-0">
                                                                 <h6>پژوهشگری برای این پروژه ثبت نشده است!</h6>
-                                                                <pre>می توانید به کمک دکمه درخواست پژوهشگر تعبیه شده درخواست خود را ثبت کنید.</pre>
+                                                                <pre style="text-align-last: center">می توانید به کمک دکمه درخواست پژوهشگر تعبیه شده درخواست خود را ثبت کنید.</pre>
                                                             {% endif %}
                                                         </div>
                                                     </div>
