--- a/industry/templates/industry/layouts/expertResume.html
+++ b/industry/templates/industry/layouts/expertResume.html
@@ -30,14 +30,14 @@
                                     </div>
                                 </div>
                                 <div class="col-12">
-{#                                    <div class="request-response">#}
-{#                                        <button class="border-button confirm-researcher"#}
-{#                                                id="researcher-confirm-" value="">تایید#}
-{#                                        </button>#}
-{#                                        <button class="border-button fail-button refuse-researcher"#}
-{#                                                id="researcher-reject-" value="">رد#}
-{#                                        </button>#}
-{#                                    </div>#}
+                                    {#                                    <div class="request-response">#}
+                                    {#                                        <button class="border-button confirm-researcher"#}
+                                    {#                                                id="researcher-confirm-" value="">تایید#}
+                                    {#                                        </button>#}
+                                    {#                                        <button class="border-button fail-button refuse-researcher"#}
+                                    {#                                                id="researcher-reject-" value="">رد#}
+                                    {#                                        </button>#}
+                                    {#                                    </div>#}
                                 </div>
                             </div>
                         </div>
@@ -154,11 +154,11 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="divide__line text-right mbottom-lg-25">
+                        <div class="divide__line text-right mbottom-lg-25 d-none">
                             <span class="w__title">سایر موارد</span>
                             <span class="__line"></span>
                         </div>
-                        <div class="row">
+                        <div class="row d-none">
                             <div class="col-12">
                                 <ul class="tick-ul">
                                     <li>
