--- a/industry/templates/industry/layouts/comment.html
+++ b/industry/templates/industry/layouts/comment.html
@@ -5,23 +5,26 @@
     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
          aria-orientation="vertical">
         {% if comments %}
-            <a class='nav-link active d-none' data-toggle='pill' role='tab' aria-controls='v-pills-home' aria-selected='true'
+            <a class='nav-link active d-none' data-toggle='pill' role='tab' aria-controls='v-pills-home'
+               aria-selected='true'
                id="v-pills-expert-{{ expert_pk }}"></a>
         {% endif %}
     </div>
 </div>
 <div class="section">
-    <div class="confirm-request">
-        <p class="request">
-        </p>
-        <div class="button-group">
-            <button class="show-resume">مشاهده رزومه</button>
-            {% if not comments %}
-                <button class="accept-request">تایید درخواست</button>
-                <button class="reject-request">رد درخواست</button>
-            {% endif %}
+    {% if not project_pk %}
+        <div class="confirm-request">
+            <p class="request">
+            </p>
+            <div class="button-group">
+                <button class="show-resume">مشاهده رزومه</button>
+                {% if not comments %}
+                    <button class="accept-request">تایید درخواست</button>
+                    <button class="reject-request">رد درخواست</button>
+                {% endif %}
+            </div>
         </div>
-    </div>
+    {% endif %}
     <div class="industry-comment"></div>
     <div class="project-comment-innerDiv">
         <div class="no-comment" style="{% if project_pk %}{% if not comments %}display:block;{% endif %}{% endif %}">
@@ -88,8 +91,10 @@
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-lg-12">
-                        <input type="text" name="project_id" id="project_id" value="{% if project_pk %}{{ project_pk }}{% endif %}" hidden>
-                        <input type="text" name="expert_id" id="expert_id" value="{% if project_pk %}{{ expert_pk }}{% endif %}" hidden>
+                        <input type="text" name="project_id" id="project_id"
+                               value="{% if project_pk %}{{ project_pk }}{% endif %}" hidden>
+                        <input type="text" name="expert_id" id="expert_id"
+                               value="{% if project_pk %}{{ expert_pk }}{% endif %}" hidden>
                         <input type="text" name="comment_replyed" id="comment_replyed" value="None" hidden>
                         <div class="send-comment-container">
                             <button class="image-btn-circle" type="submit"></button>
