--- a/industry/templates/industry/layouts/comment.html
+++ b/industry/templates/industry/layouts/comment.html
@@ -53,7 +53,7 @@
                             <div class='comment-body {% if comment.attachment != "None" %}attached{% endif %}'>
                                 <pre>{{ comment.text }}</pre>
                                 {% if comment.attachment != "None" %}
-                                    <a href='/{{ comment.attachment }}' class='attached-file'>
+                                    <a href='{{ comment.attachment }}' class='attached-file'>
                                         <i class='fas fa-paperclip'></i>
                                         <span>{% file_name comment.attachment %}</span>
                                     </a>
@@ -66,7 +66,7 @@
                                 <span class='comment-tools'></span>
                                 <pre>{{ comment.text }}</pre>
                                 {% if comment.attachment != "None" %}
-                                    <a href='/{{ comment.attachment }}' class='attached-file'>
+                                    <a href='{{ comment.attachment }}' class='attached-file'>
                                         <i class='fas fa-paperclip'></i>
                                         <span>{% file_name comment.attachment %}</span>
                                     </a>
