rename researcher record submit button

--- a/researcher/templates/researcher/layouts/scientific_form.html
+++ b/researcher/templates/researcher/layouts/scientific_form.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="reset" class="btn btn-secondary" data-dismiss="modal">لغو</button>
-                    <button type="submit" class="btn btn-primary mr-2">افزدون</button>
+                    <button type="submit" class="btn btn-primary mr-2">افزودن</button>
                 </div>
             </div>
         </form>
